<resources>
    <string name="app_name">Password Manager</string>
    <string name="title_activity_main">Password Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_about">About</string>
    <string name="nav_home">Home</string>
    <string name="nav_backup_to_cloud">Backup to cloud</string>
    <string name="nav_social_media">Social Media</string>
    <string name="nav_debit_credit_card">Debit / Credit card</string>
    <string name="nav_bank">Bank Account</string>
    <string name="nav_cryptocurrency">Cryptocurrency</string>
    <string name="nav_server_or_networking">Server or Networking</string>
    <string name="nav_email_account">Email Account</string>
    <string name="nav_rate_this_app">Rate This App</string>
    <string name="nav_share_this_app">Share This App</string>
    <string name="nav_more_apps">More Apps</string>
    <string name="nav_others">Others</string>
    <string name="nav_seperation_cloud_backup">Cloud Backup</string>
    <string name="nav_restore_from_cloud">Restore from cloud</string>


    <string name="nav_seperator_communicate">Communicate</string>
    <string name="nav_seperator_categories">Categories</string>
    <string name="action_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_menu_view">View Details</string>
    <string name="card_menu_update">Edit</string>
    <string name="card_menu_delete">Delete</string>
    <string name="card_menu_copy_password">Copy Password</string>
    <string name="card_action_visit_site">Visit Site</string>
    <string name="card_action_copy_email">Copy Email</string>
    <string name="card_action_copy_card_number">Copy Card Number</string>
    <string name="action_copy_card_pin">Copy Card Pin</string>
    <string name="action_copy_ccv">Copy CCV</string>
    <string name="action_backup_on_cloud">Backup on cloud</string>


    <string-array name="catagory">
        <item>Select a category</item>
        <item>Bank Account</item>
        <item>Debit / Credit Card</item>
        <item>Cryptocurrency</item>
        <item>Email Account</item>
        <item>Social Media</item>
        <item>Others</item>
    </string-array>



    <string name="juboraj_sarker"><u>Juboraj Sarker</u></string>



    <string name="interstitial_full_screen1">ca-app-pub-5809082953640465/5338019371</string>


</resources>
